src/test/run-pass/issue-2190.rs
// xfail-test
type t = {
    f: fn~()
};

fn main() {
    let _t: t = { f: {||()} };
}
